--- a/events.qmd
+++ b/events.qmd
@@ -4,15 +4,15 @@ title: ""
 
 # recurring
 
-to request log-in info, contact us at quantshopusers [at] gmail [dot] com.
+to request login info, contact us at quantshopusers [at] gmail [dot] com.
 
 ### census-users group
 
-Thursdays at 5:00pm ET via Zoom.
+Every Thursday at 5:00pm ET via Zoom (30 minutes).
 
 ### text-users group
 
-Thursdays at 5:30pm ET via Zoom.
+Fourth Thursday of each month at 5:30pm ET via Zoom (60 minutes).
 
 ---
 
@@ -20,7 +20,9 @@ Thursdays at 5:30pm ET via Zoom.
 
 ## 2025 fall
 
-calendar forthcoming.
+New Member Orientation -- Monday August 18 at 4:30pm ET.
+
+Register [here]().
 
 ## 2025 spring
 
