--- a/index.qmd
+++ b/index.qmd
@@ -24,21 +24,25 @@ about:
       target: _blank
 ---
 
-welcome user. choose your quest.
+welcome user. 
+
+the **quantitative histories workshop**
+
+is a *public*, *open source*, *justice-centered* project.
+
+we believe there are different meanings of justice.
+
+we welcome new and experienced users who wish to contribute to our explorations.
 
 - see all of our workshops at [quant-shop-users](quant-shop.qmd){.external target="_blank"}
 
-- visit our current projects:
+- visit some of our current projects:
   
   - [census-users](https://quant-shop.github.io/census/){.external target="_blank"}
   
   - [ed-users](https://professornaite.github.io/racism-stem-ed/){.external target="_blank"}
 
-  - [critstats-users](https://professornaite.github.io/critstats/){.external target="_blank"}
-
-  - [text-users](https://professornaite.github.io/critbot/){.external target="_blank"}
-
-- learn about our sister lab, the [HJLab](https://hyeryeonjang.com/){.external target="_blank"}
+- learn about our Co-PI and sister lab, the [HJLab](https://hyeryeonjang.com/){.external target="_blank"}
 
 what is a [user group](files/user-group.qmd){target="_blank"}?
 
