--- a/about.qmd
+++ b/about.qmd
@@ -2,13 +2,17 @@
 title: "about"
 ---
 
-we are a network of small group projects. we use interdisciplinary inquiries to understand history.
+we are a network of collaborative projects. 
 
-![howard university lab members at the 2025 DC Open Data Showcase](/img/events/dc-open-data.jpeg){width=40%}
+we use interdisciplinary perspectives and computational tools to educate ourselves about history.
+
+![howard university lab members at the 2025 DC Open Data Showcase](/img/events/dc-open-data.jpeg){width=30%}
 
 
-specifically, we quantify historical events and the social sciences to learn about in/justice and futurity. we attempt to maintain the best uses of critical theories and modern computational tools to learn about and respond to local and global issues of in/justice. our work inspires our members to set up community-centered, near-peer research projects and user groups. in these groups, users engage with other members of their teams by creating small learning communities to engage in interdisciplinary learning about pressing questions.
+specifically, we quantify historical events and the social sciences to learn about in/justice and futurity. 
+
+we attempt to maintain the best uses of critical theories and modern computational tools to learn about and respond to local and global issues of in/justice. our work inspires our members to set up community-centered, near-peer research projects and user groups. in these groups, users engage with other members of their teams by creating small learning communities to engage in interdisciplinary learning about pressing questions.
 
 our workshop is inspired by the legacy of the great, late Bob Moses, founder of the [Algebra Project](https://www.algebra.org){target="_blank"}.
 
-![nathan alexander and bob moses at the 2017 data for Black Lives Conference](/img/historical-figs/nathan-bob.jpg){width=40%}
+![nathan alexander and bob moses at the 2017 data for Black Lives Conference](/img/historical-figs/nathan-bob.jpg){width=25%}
