--- a/index.qmd
+++ b/index.qmd
@@ -28,13 +28,13 @@ welcome user.
 
 the **quantitative histories workshop**
 
-is a *public*, *open source*, *justice-centered* project.
+is a *public*, *open source*, *justice-centered* data project.
 
 we believe there are different meanings of justice.
 
 we welcome new and experienced users who wish to contribute to our explorations.
 
-- see all of our workshops at [quant-shop-users](quant-shop.qmd){.external target="_blank"}
+- see some of our workshops at [quant-shop-users](quant-shop.qmd){.external target="_blank"}
 
 - visit some of our current projects:
   
