--- a/quant-shop.qmd
+++ b/quant-shop.qmd
@@ -22,25 +22,19 @@ about:
 
   - [FATAL: a study of fatal police interactions in the united states](https://github.com/quant-shop/fatalv2){.external target="_blank"}
 
-  - [bombs over baghdad](https://professornaite.github.io/bob){.external target="_blank"}
+  - [bob](https://professornaite.github.io/bob){.external target="_blank"}
   
-  - [gen0cide (forthcoming)](){.external target="_blank"}
-
 - abolition
 
   - [a quantitative abolitionist inquiry, phase 1: lynching](https://quant-shop.github.io/red-record){.external target="_blank"}
 
   - [a quantitative abolitionist inquiry, phase 2: policing](https://quant-shop.github.io/fatal-app/){.external target="_blank"}
 
-  - [a quantitative abolitionist inquiry, phase 3: prisons](https://github.com/quant-shop/prisons/blob/main/data/prisoners-text.pdf){.external target="_blank"}
-
 - demography
 
   - [census history project, phase 1: race and ethnicity](https://professornaite.github.io/echo/){.external target="_blank"}
 
   - [census history project, phase 2: multidimensionality (forthcoming)](https://rpubs.com/professornaite/dc-open-data-2025){.external target="_blank"}
-  
-  - [introduction to mapping](https://rpubs.com/professornaite/mapping_intro){.external target="_blank"}
 
 - the OG: Du Bois
 
@@ -52,6 +46,6 @@ about:
 
   - [rock the vote (forthcoming)](/img/rock_the_vote.jpg){.external target="_blank"}
   
-- have a project idea!? hit us up at quantshopusers [at] gmail [dot] com
+- have an idea? contact up at quantshopusers [at] gmail [dot] com
 
-we support equitable open source practices. see a list of our project repositories [here](https://github.com/quant-shop){target="_blank"}.
+we support equitable open source practices. see a list of our repositories [here](https://github.com/quant-shop){target="_blank"}.
