--- a/events.qmd
+++ b/events.qmd
@@ -10,11 +10,11 @@ However, you must register and be in touch with a member of the lab.
 
 ### census-users group
 
-Every Thursday at 5:00pm ET via Zoom (30 minutes).
+Every Thursday at 2pm PT/5pm ET/9pm UTC via Zoom (30 minutes).
 
 ### text-users group
 
-Fourth Thursday of each month at 5:30pm ET via Zoom (60 minutes).
+Fourth Thursday of each month at 2:30pm PT/5:30pm ET/9:30pm UTC via Zoom (60 minutes).
 
 ---
 
