--- a/index.qmd
+++ b/index.qmd
@@ -36,14 +36,14 @@ we welcome new and experienced users into our groups.
 
 ---
 
-see some of our workshops at [quant-shop-users](quant-shop.qmd){.external target="_blank"}
+see a few of our workshops at [quant-shop-users](quant-shop.qmd){.external target="_blank"} and sample projects below:
+
+  - [racism in STEM education](https://professornaite.github.io/racism-stem-ed/){.external target="_blank"}
 
   - [FATAL: a study of fatal police interactions](https://github.com/quant-shop/fatalv2){.external target="_blank"}
 
   - [census-users](https://quant-shop.github.io/census/){.external target="_blank"}
   
-  - [ed-users](https://professornaite.github.io/racism-stem-ed/){.external target="_blank"}
-
 learn about our Co-PI and sister lab, the [HJLab](https://hyeryeonjang.com/){.external target="_blank"}
 
 what is a [user group](files/user-group.qmd){target="_blank"}?
