--- a/index.qmd
+++ b/index.qmd
@@ -26,13 +26,11 @@ about:
 
 welcome user. 
 
-the **quantitative histories workshop** is a public learning lab.
+the **quantitative histories workshop** is a public learning lab. 
 
-we develop curriculum materials, software, and computational tools.
+we make use of publicly available data as well as free and open source software tools. we welcome new and experienced users into our user groups.
 
-we make use of publicly available data as well as free and open source software tools.
-
-we welcome new and experienced users into our groups.
+we also welcome non-users for curriculum and lesson development.
 
 ---
 
